// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityPostsComponent should change like button when there are likes 1`] = `
<pf-community-posts
  CommunityPosts={[Function Array]}
  LoadMockPosts="false"
  UserAvatarSource={[Function String]}
>
  <div
    class="start-discussion-container mb-3"
  >
    <div
      class="start-discussion-header"
    >
      <ul
        class="mb-0"
      >
        <li
          class="pl-4 pr-4 section-active"
        >
          Start a Discussion
        </li>
        <li
          class="pl-4 pr-4"
        >
          Ask a Question
        </li>
        <li
          class="pl-4 pr-4"
        >
          Post a Job
        </li>
      </ul>
    </div>
    <div
      class="start-discussion-body p-2"
    >
      <img
        alt="avatar"
        class="pf-avatar ml-1"
        id="discussion-avatar"
        src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg"
      />
      <div
        class="w-100"
      >
        <textarea
          maxlength="2000"
          placeholder="Start a discussion..."
        />
        <div
          class="ml-3 p-0"
        >
          <input
            id="internal-only"
            name="internal-only"
            type="checkbox"
            value="Internal Only"
          />
          <label
            class="ml-1"
            for="internal-only"
          >
            Internal Only
          </label>
          <button
            class="btn btn-primary m-1 float-right"
            id="start-discussion-post-button"
          >
            Post
          </button>
        </div>
      </div>
    </div>
  </div><div
    class="posts-container p-2 scroll"
  >
    
    
    <div
      class="row mb-3 ml-0 mr-0"
    >
      <div
        class="pl-1 col-12"
      >
        <img
          alt="avatar"
          class="float-left pf-avatar"
          id="post-avatar"
          src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg"
        />
        <div
          class="post-offset"
        >
          
          <p
            class="m-0"
          >
            <span
              class="community-user-name-text"
            >
              Test User
            </span>
            <span
              class="community-sub-text"
            >
               @ Test Company | 3 days ago
            </span>
          </p>
          <p
            class="mt-2 mb-2"
          >
            post text
          </p>
          <button
            class="btn m-1 community-btn-clicked"
            id="like"
            ng-reflect-klass="btn m-1"
            ng-reflect-ng-class="[object Object]"
            type="button"
          >
            <i
              class="far fa-thumbs-up fa-lg icon"
            />
            
            
            <span>
               55 Liked
            </span>
          </button>
          <button
            class="btn community-btn m-1"
            id="reply"
            type="button"
          >
            <i
              class="far fa-reply fa-lg icon"
            />
            
            <span>
               Reply
            </span>
            
          </button>
          <div>
            
          </div>
          <div
            class="mt-2"
          >
            
            
            <div
              class="reply-offset"
            >
              <span>
                No Replies Yet
              </span>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
    
  </div>
</pf-community-posts>
`;

exports[`CommunityPostsComponent should show internal tag when post is internal 1`] = `
<pf-community-posts
  CommunityPosts={[Function Array]}
  LoadMockPosts="false"
  UserAvatarSource={[Function String]}
>
  <div
    class="start-discussion-container mb-3"
  >
    <div
      class="start-discussion-header"
    >
      <ul
        class="mb-0"
      >
        <li
          class="pl-4 pr-4 section-active"
        >
          Start a Discussion
        </li>
        <li
          class="pl-4 pr-4"
        >
          Ask a Question
        </li>
        <li
          class="pl-4 pr-4"
        >
          Post a Job
        </li>
      </ul>
    </div>
    <div
      class="start-discussion-body p-2"
    >
      <img
        alt="avatar"
        class="pf-avatar ml-1"
        id="discussion-avatar"
        src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg"
      />
      <div
        class="w-100"
      >
        <textarea
          maxlength="2000"
          placeholder="Start a discussion..."
        />
        <div
          class="ml-3 p-0"
        >
          <input
            id="internal-only"
            name="internal-only"
            type="checkbox"
            value="Internal Only"
          />
          <label
            class="ml-1"
            for="internal-only"
          >
            Internal Only
          </label>
          <button
            class="btn btn-primary m-1 float-right"
            id="start-discussion-post-button"
          >
            Post
          </button>
        </div>
      </div>
    </div>
  </div><div
    class="posts-container p-2 scroll"
  >
    
    
    <div
      class="row mb-3 ml-0 mr-0"
    >
      <div
        class="pl-1 col-12"
      >
        <img
          alt="avatar"
          class="float-left pf-avatar"
          id="post-avatar"
          src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg"
        />
        <div
          class="post-offset"
        >
          
          <div
            class="internal float-right pl-2 pr-2"
          >
            Internal
          </div>
          <p
            class="m-0"
          >
            <span
              class="community-user-name-text"
            >
              Test User
            </span>
            <span
              class="community-sub-text"
            >
               @ Test Company | 3 days ago
            </span>
          </p>
          <p
            class="mt-2 mb-2"
          >
            post text
          </p>
          <button
            class="btn m-1 community-btn-clicked"
            id="like"
            ng-reflect-klass="btn m-1"
            ng-reflect-ng-class="[object Object]"
            type="button"
          >
            <i
              class="far fa-thumbs-up fa-lg icon"
            />
            
            
            <span>
               55 Liked
            </span>
          </button>
          <button
            class="btn community-btn m-1"
            id="reply"
            type="button"
          >
            <i
              class="far fa-reply fa-lg icon"
            />
            
            <span>
               Reply
            </span>
            
          </button>
          <div>
            
            
            <button
              class="btn m-1 tag p-1"
              type="button"
            >
              <i
                class="far fa-tag fa-lg tag-icon"
              />
               Community tag 
            </button>
            
            <button
              class="btn m-1 tag p-1"
              type="button"
            >
              <i
                class="far fa-tag fa-lg tag-icon"
              />
               another tag 
            </button>
          </div>
          <div
            class="mt-2"
          >
            
            
            <div
              class="reply-offset"
            >
              <span>
                No Replies Yet
              </span>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
    
  </div>
</pf-community-posts>
`;

exports[`CommunityPostsComponent should show posts 1`] = `
<pf-community-posts
  CommunityPosts={[Function Array]}
  LoadMockPosts="false"
  UserAvatarSource={[Function String]}
>
  <div
    class="start-discussion-container mb-3"
  >
    <div
      class="start-discussion-header"
    >
      <ul
        class="mb-0"
      >
        <li
          class="pl-4 pr-4 section-active"
        >
          Start a Discussion
        </li>
        <li
          class="pl-4 pr-4"
        >
          Ask a Question
        </li>
        <li
          class="pl-4 pr-4"
        >
          Post a Job
        </li>
      </ul>
    </div>
    <div
      class="start-discussion-body p-2"
    >
      <img
        alt="avatar"
        class="pf-avatar ml-1"
        id="discussion-avatar"
        src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg"
      />
      <div
        class="w-100"
      >
        <textarea
          maxlength="2000"
          placeholder="Start a discussion..."
        />
        <div
          class="ml-3 p-0"
        >
          <input
            id="internal-only"
            name="internal-only"
            type="checkbox"
            value="Internal Only"
          />
          <label
            class="ml-1"
            for="internal-only"
          >
            Internal Only
          </label>
          <button
            class="btn btn-primary m-1 float-right"
            id="start-discussion-post-button"
          >
            Post
          </button>
        </div>
      </div>
    </div>
  </div><div
    class="posts-container p-2 scroll"
  >
    
    
    <div
      class="row mb-3 ml-0 mr-0"
    >
      <div
        class="pl-1 col-12"
      >
        <img
          alt="avatar"
          class="float-left pf-avatar"
          id="post-avatar"
          src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg"
        />
        <div
          class="post-offset"
        >
          
          <p
            class="m-0"
          >
            <span
              class="community-user-name-text"
            >
              Test User
            </span>
            <span
              class="community-sub-text"
            >
               @ Test Company | 3 days ago
            </span>
          </p>
          <p
            class="mt-2 mb-2"
          >
            post text
          </p>
          <button
            class="btn m-1 community-btn"
            id="like"
            ng-reflect-klass="btn m-1"
            ng-reflect-ng-class="[object Object]"
            type="button"
          >
            <i
              class="far fa-thumbs-up fa-lg icon"
            />
            
            <span>
               Like
            </span>
            
          </button>
          <button
            class="btn community-btn m-1"
            id="reply"
            type="button"
          >
            <i
              class="far fa-reply fa-lg icon"
            />
            
            <span>
               Reply
            </span>
            
          </button>
          <div>
            
          </div>
          <div
            class="mt-2"
          >
            
            
            <div
              class="reply-offset"
            >
              <span>
                No Replies Yet
              </span>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
    
  </div>
</pf-community-posts>
`;

exports[`CommunityPostsComponent should show tags 1`] = `
<pf-community-posts
  CommunityPosts={[Function Array]}
  LoadMockPosts="false"
  UserAvatarSource={[Function String]}
>
  <div
    class="start-discussion-container mb-3"
  >
    <div
      class="start-discussion-header"
    >
      <ul
        class="mb-0"
      >
        <li
          class="pl-4 pr-4 section-active"
        >
          Start a Discussion
        </li>
        <li
          class="pl-4 pr-4"
        >
          Ask a Question
        </li>
        <li
          class="pl-4 pr-4"
        >
          Post a Job
        </li>
      </ul>
    </div>
    <div
      class="start-discussion-body p-2"
    >
      <img
        alt="avatar"
        class="pf-avatar ml-1"
        id="discussion-avatar"
        src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg"
      />
      <div
        class="w-100"
      >
        <textarea
          maxlength="2000"
          placeholder="Start a discussion..."
        />
        <div
          class="ml-3 p-0"
        >
          <input
            id="internal-only"
            name="internal-only"
            type="checkbox"
            value="Internal Only"
          />
          <label
            class="ml-1"
            for="internal-only"
          >
            Internal Only
          </label>
          <button
            class="btn btn-primary m-1 float-right"
            id="start-discussion-post-button"
          >
            Post
          </button>
        </div>
      </div>
    </div>
  </div><div
    class="posts-container p-2 scroll"
  >
    
    
    <div
      class="row mb-3 ml-0 mr-0"
    >
      <div
        class="pl-1 col-12"
      >
        <img
          alt="avatar"
          class="float-left pf-avatar"
          id="post-avatar"
          src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg"
        />
        <div
          class="post-offset"
        >
          
          <p
            class="m-0"
          >
            <span
              class="community-user-name-text"
            >
              Test User
            </span>
            <span
              class="community-sub-text"
            >
               @ Test Company | 3 days ago
            </span>
          </p>
          <p
            class="mt-2 mb-2"
          >
            post text
          </p>
          <button
            class="btn m-1 community-btn-clicked"
            id="like"
            ng-reflect-klass="btn m-1"
            ng-reflect-ng-class="[object Object]"
            type="button"
          >
            <i
              class="far fa-thumbs-up fa-lg icon"
            />
            
            
            <span>
               55 Liked
            </span>
          </button>
          <button
            class="btn community-btn m-1"
            id="reply"
            type="button"
          >
            <i
              class="far fa-reply fa-lg icon"
            />
            
            <span>
               Reply
            </span>
            
          </button>
          <div>
            
            
            <button
              class="btn m-1 tag p-1"
              type="button"
            >
              <i
                class="far fa-tag fa-lg tag-icon"
              />
               Community tag 
            </button>
            
            <button
              class="btn m-1 tag p-1"
              type="button"
            >
              <i
                class="far fa-tag fa-lg tag-icon"
              />
               another tag 
            </button>
          </div>
          <div
            class="mt-2"
          >
            
            
            <div
              class="reply-offset"
            >
              <span>
                No Replies Yet
              </span>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
    
  </div>
</pf-community-posts>
`;
